--- a/src/html/cli.html
+++ b/src/html/cli.html
@@ -51,6 +51,7 @@
             font-family: monospace;
             display: none;
         }
+
         #sb-caret {
             border: 0;
             padding: 0;
@@ -63,6 +64,7 @@
         .ylw {
             color: #fffc72;
         }
+
         .mag {
             color: #ff77fc;
         }
@@ -122,26 +124,18 @@
     <div id="content">
         <div class="wht" id="title">Get Meetings By Venue-Type</div>
         <br/>
-
         <div class="mag inline">Root Servers:&nbsp;</div>
         <div class="ylw" id="tomato-roots"></div>
-
         <br/>
-
-        <div class="mag inline">Select a root server:&nbsp;</div><div id="ts-caret">&nbsp;</div>
+        <div class="mag inline">Select a root server:&nbsp;</div>
+        <div id="ts-caret">&nbsp;</div>
         <input type="text" id="root-selection" class="input">
-
         <br/>
         <br/>
-
         <div class="mag inline" id="selectedRootLabel"></div>
         <div class="red inline" id="selectedRoot"></div>
-
-
-
         <br/>
         <br/>
-
         <div id="regionsDiv">
             <div class="mag inline regionsDiv">Regions:&nbsp;</div>
             <div class="ylw" id="regions"></div>
@@ -150,16 +144,11 @@
             <div id="sr-caret">&nbsp;</div>
             <input type="text" id="region-selection" class="input">
         </div>
-
-
         <br/>
-
         <div class="mag inline" id="selectedRegionLabel"></div>
         <div class="red inline" id="selectedRegion"></div>
-
         <br/>
         <br/>
-
         <div id="serviceBodiesDiv">
             <div class="mag inline">Service Bodies:&nbsp;</div>
             <div class="ylw" id="serviceBodies"></div>
@@ -168,15 +157,11 @@
             <div id="sb-caret">&nbsp;</div>
             <input type="text" id="service-bodies-selection" class="input">
         </div>
-
         <br/>
-
         <div class="mag inline" id="selectedServiceBodyLabel"></div>
         <div class="red inline" id="selectedServiceBody"></div>
-
         <br/>
         <br/>
-
         <div id="tallyDiv">
             <div class="wht">Total Meetings By Venue Type</div>
             <br/>
@@ -199,7 +184,6 @@
         </div>
     </div>
 </div>
-
 <script type="application/javascript">
     function removeScript(scriptId) {
         let script = document.getElementById(scriptId);
@@ -297,17 +281,17 @@
 
         const tomatoInput = document.getElementById('root-selection');
 
-        tomatoInput.onkeydown = function(event){
-            if(event.key === 'Enter') {
+        tomatoInput.onkeydown = function (event) {
+            if (event.key === 'Enter') {
                 document.getElementById("ts-caret").style.display = "none";
-                proccessSelectedRootServer(tomatoInput.value, tomatoServersData[tomatoInput.value -1])
+                proccessSelectedRootServer(tomatoInput.value, tomatoServersData[tomatoInput.value - 1])
             }
         }
     }
-    
+
     async function proccessSelectedRootServer(selectionNumber, selectedRootServer) {
         document.getElementById('selectedRootLabel').innerHTML = "You selected: "
-        document.getElementById('selectedRoot').innerHTML =  + selectionNumber + " [" + selectedRootServer.name + "]"
+        document.getElementById('selectedRoot').innerHTML = +selectionNumber + " [" + selectedRootServer.name + "]"
         let regionsData = await fetchJsonp(selectedRootServer.rootURL + 'client_interface/jsonp/?switcher=GetServiceBodies').then(function (response) {
             return response.json();
         })
@@ -337,18 +321,17 @@
 
         const regionInput = document.getElementById('region-selection');
 
-        regionInput.onkeydown = function(event){
-            if(event.key === 'Enter') {
+        regionInput.onkeydown = function (event) {
+            if (event.key === 'Enter') {
                 document.getElementById("sr-caret").style.display = "none";
-                proccessSelectedRegion1(regionInput.value, regions[regionInput.value -1], regionsData, selectedRootServer.rootURL)
+                proccessSelectedRegion1(regionInput.value, regions[regionInput.value - 1], regionsData, selectedRootServer.rootURL)
             }
         }
     }
 
     async function proccessSelectedRegion1(selectionNumber, selectedRegion, regionsData, rootServerUrl) {
         document.getElementById('selectedRegionLabel').innerHTML = "You selected: "
-        document.getElementById('selectedRegion').innerHTML =  + selectionNumber + " [" + selectedRegion.name + " (" + selectedRegion.id + ")]"
-
+        document.getElementById('selectedRegion').innerHTML = +selectionNumber + " [" + selectedRegion.name + " (" + selectedRegion.id + ")]"
 
         let serviceBodiesData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetServiceBodies').then(function (response) {
             return response.json();
@@ -379,17 +362,15 @@
         document.getElementById("sb-caret").style.display = "inline-block";
 
         const serviceBodyInput = document.getElementById('service-bodies-selection');
-
-        serviceBodyInput.onkeydown = function(event){
-            if(event.key === 'Enter') {
+        serviceBodyInput.onkeydown = function (event) {
+            if (event.key === 'Enter') {
                 document.getElementById("sb-caret").style.display = "none";
-                proccessSelectedServiceBodies1(serviceBodyInput.value, serviceBodies[selectionNumber-1], rootServerUrl)
+                proccessSelectedServiceBodies(serviceBodyInput.value, serviceBodies[selectionNumber - 1], rootServerUrl)
             }
         }
     }
 
-    async function proccessSelectedServiceBodies1(selectionId, serviceBody, rootServerUrl) {
-        //console.log(selectionId, serviceBody, rootServerUrl)
+    async function proccessSelectedServiceBodies(selectionId, serviceBody, rootServerUrl) {
         document.getElementById('selectedServiceBodyLabel').innerHTML = "You selected: "
         document.getElementById('selectedServiceBody').innerHTML = selectionId + " [" + serviceBody.name + " (" + serviceBody.id + ")]"
         let meetingsData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetSearchResults&services=' + serviceBody.id + '&recursive=1&data_field_key=formats').then(function (response) {
