--- a/index.html
+++ b/index.html
@@ -19,52 +19,6 @@
             background-color: #000000;
         }
 
-        .input {
-            color: #bfbfbf;
-            border: none;
-            background-color: transparent;
-            resize: none;
-            outline: none;
-        }
-
-        #input {
-            display: inline;
-            word-break: break-all;
-            outline: none;
-            visibility: visible;
-        }
-
-        #ts-caret {
-            border: 0;
-            padding: 0;
-            outline: none;
-            background-color: #bfbfbf;
-            display: inline-block;
-            font-family: monospace;
-        }
-
-        #sr-caret {
-            border: 0;
-            padding: 0;
-            outline: none;
-            background-color: #bfbfbf;
-            font-family: monospace;
-            display: none;
-        }
-
-        #sb-caret {
-            border: 0;
-            padding: 0;
-            outline: none;
-            background-color: #bfbfbf;
-            font-family: monospace;
-            display: none;
-        }
-
-        .ylw {
-            color: #fffc72;
-        }
-
         .mag {
             color: #ff77fc;
         }
@@ -87,10 +41,6 @@
 
         .grn {
             color: #5cfa72;
-        }
-
-        .red {
-            color: #fb6c65;
         }
 
         .container {
@@ -128,45 +78,47 @@
     <div id="content">
         <div class="wht" id="title">Get Meetings By Venue-Type</div>
         <br/>
-        <div class="mag inline">Root Servers:&nbsp;</div>
-        <div class="ylw" id="tomato-roots"></div>
-        <br/>
-        <div class="mag inline">Select a root server:&nbsp;</div>
-        <div id="ts-caret">&nbsp;</div>
-        <input type="text" id="root-selection" class="input">
+        <label class="mag" for="tomato-dropdown">Root Servers:&nbsp;
+            <select id="tomato-dropdown" name="tomato-roots" onChange="rootSelected()"></select>
+        </label>
+
         <br/>
         <br/>
-        <div class="red" id="ts-warning"></div>
+
         <div class="mag inline" id="selectedRootLabel"></div>
         <div class="red inline" id="selectedRoot"></div>
+
         <br/>
         <br/>
+
         <div id="regionsDiv">
-            <div class="mag inline regionsDiv">Regions:&nbsp;</div>
-            <div class="ylw" id="regions"></div>
-            <br/>
-            <div class="mag inline">Select a region: &nbsp;</div>
-            <div id="sr-caret">&nbsp;</div>
-            <input type="text" id="region-selection" class="input">
+            <label class="mag" for="regions-dropdown">Regions:&nbsp;
+                <select id="regions-dropdown" name="regions" onChange="regionSelected()"></select>
+            </label>
         </div>
+
         <br/>
-        <div class="mag inline" id="selectedRegionLabel"></div>
-        <div class="red inline" id="selectedRegion"></div>
+
+        <div class="mag inline" id="selectedRootServerLabel"></div>
+        <div class="red inline" id="selectedRootServer"></div>
+
         <br/>
         <br/>
+
         <div id="serviceBodiesDiv">
-            <div class="mag inline">Service Bodies:&nbsp;</div>
-            <div class="ylw" id="serviceBodies"></div>
-            <br/>
-            <div class="mag inline">Select a service body: &nbsp;</div>
-            <div id="sb-caret">&nbsp;</div>
-            <input type="text" id="service-bodies-selection" class="input">
+            <label class="mag" for="service-bodies-dropdown">Service Bodies:&nbsp;
+                <select id="service-bodies-dropdown" name="service-bodies" onChange="serviceBodiesSelected()"></select>
+            </label>
         </div>
+
         <br/>
+
         <div class="mag inline" id="selectedServiceBodyLabel"></div>
         <div class="red inline" id="selectedServiceBody"></div>
+
         <br/>
         <br/>
+
         <div id="tallyDiv">
             <div class="wht">Total Meetings By Venue Type</div>
             <br/>
@@ -189,6 +141,7 @@
         </div>
     </div>
 </div>
+
 <script type="application/javascript">
     function removeScript(scriptId) {
         let script = document.getElementById(scriptId);
@@ -276,34 +229,37 @@
 
             return a < b ? -1 : a > b ? 1 : 0;
         });
+        let dropdown = document.getElementById('tomato-dropdown');
+        dropdown.length = 0;
 
-        let displayServers = document.getElementById('tomato-roots');
-        let tsc = 1
+        let defaultOption = document.createElement('option');
+        defaultOption.text = 'Select a root server:';
+
+        dropdown.add(defaultOption);
+        dropdown.selectedIndex = 0;
+
+        let option;
         for (let i = 0; i < tomatoServersData.length; i++) {
-            displayServers.innerHTML += "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" + tsc + " " + tomatoServersData[i].name + "<br>"
-            tsc++
-        }
-
-        const tomatoInput = document.getElementById('root-selection');
-
-        tomatoInput.onkeydown = function (event) {
-            if (event.key === 'Enter') {
-                if (tomatoInput.value > tomatoServersData.length) {
-                    document.getElementById('ts-warning').innerHTML = "Error: Selection must match one of the choices."
-                    document.getElementById("ts-warning").style.display = "block";
-                } else {
-                    document.getElementById("ts-warning").style.display = "none";
-                    document.getElementById("ts-caret").style.display = "none";
-                    proccessSelectedRootServer(tomatoInput.value, tomatoServersData[tomatoInput.value - 1])
-                }
-            }
+            option = document.createElement('option');
+            option.text = tomatoServersData[i].name;
+            option.value = tomatoServersData[i].rootURL;
+            dropdown.add(option);
         }
     }
 
-    async function proccessSelectedRootServer(selectionNumber, selectedRootServer) {
+    function rootSelected() {
+        let select = document.getElementById('tomato-dropdown');
+        let option = select.options[select.selectedIndex];
+        let rootServerId = select.selectedIndex
+        let rootServerUrl = option.value
+        let rootServerName = option.text
+        proccessSelectedRootServer(rootServerId, rootServerUrl, rootServerName)
+    }
+
+    async function proccessSelectedRootServer(rootServerId, rootServerUrl, rootServerName) {
         document.getElementById('selectedRootLabel').innerHTML = "You selected: "
-        document.getElementById('selectedRoot').innerHTML = +selectionNumber + " [" + selectedRootServer.name + "]"
-        let regionsData = await fetchJsonp(selectedRootServer.rootURL + 'client_interface/jsonp/?switcher=GetServiceBodies').then(function (response) {
+        document.getElementById('selectedRoot').innerHTML = rootServerId + " [" + rootServerName + "]"
+        let regionsData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetServiceBodies').then(function (response) {
             return response.json();
         })
         regionsData.sort(function (a, b) {
@@ -320,29 +276,42 @@
             }
         }
 
-        let displayRegions = document.getElementById('regions');
-        let rsc = 1
-        displayRegions.innerHTML = ""
+        let regionDropdown = document.getElementById('regions-dropdown');
+        regionDropdown.length = 0;
+
+        let defaultRegionOption = document.createElement('option');
+        defaultRegionOption.text = 'Select a region:';
+
+        regionDropdown.add(defaultRegionOption);
+        regionDropdown.selectedIndex = 0;
+
+        let regionOption;
         for (let i = 0; i < regions.length; i++) {
-            displayRegions.innerHTML += "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" + rsc + " " + regions[i].name + "<br>"
-            rsc++
+            regionOption = document.createElement('option');
+            regionOption.text = regions[i].name;
+            regionOption.value = rootServerUrl + "||" + regions[i].id;
+            regionDropdown.add(regionOption);
         }
         document.getElementById("regionsDiv").style.display = "block";
-        document.getElementById("sr-caret").style.display = "inline-block";
-
-        const regionInput = document.getElementById('region-selection');
-
-        regionInput.onkeydown = function (event) {
-            if (event.key === 'Enter') {
-                document.getElementById("sr-caret").style.display = "none";
-                proccessSelectedRegion1(regionInput.value, regions[regionInput.value - 1], regionsData, selectedRootServer.rootURL)
-            }
-        }
     }
 
-    async function proccessSelectedRegion1(selectionNumber, selectedRegion, regionsData, rootServerUrl) {
-        document.getElementById('selectedRegionLabel').innerHTML = "You selected: "
-        document.getElementById('selectedRegion').innerHTML = +selectionNumber + " [" + selectedRegion.name + " (" + selectedRegion.id + ")]"
+    function regionSelected() {
+        let regionSelect = document.getElementById('regions-dropdown');
+        let regionOption = regionSelect.options[regionSelect.selectedIndex];
+        let selectionId = regionSelect.selectedIndex
+        let regionUrl = regionOption.value
+        let regionName = regionOption.text
+        proccessSelectedRegion(selectionId, regionUrl, regionName)
+    }
+
+
+    async function proccessSelectedRegion(selectionId, regionUrl, regionName) {
+        const regionInfo = regionUrl.split("||");
+        let rootServerUrl = regionInfo[0];
+        let regionSelectedId = regionInfo[1];
+        document.getElementById('selectedRootServerLabel').innerHTML = "You selected: "
+        document.getElementById('selectedRootServer').innerHTML = selectionId + " [" + regionName + " (" + regionSelectedId + ")]"
+
 
         let serviceBodiesData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetServiceBodies').then(function (response) {
             return response.json();
@@ -356,35 +325,47 @@
 
         let serviceBodies = [];
         for (const serviceBody of serviceBodiesData) {
-            if (serviceBody.parent_id === selectedRegion.id || serviceBody.id === selectedRegion.id) {
+            if (serviceBody.parent_id === regionSelectedId || serviceBody.id === regionSelectedId) {
                 serviceBodies.push(serviceBody);
             }
         }
 
-        let displayServiceBodies = document.getElementById('serviceBodies');
-        let sbc = 1
-        displayServiceBodies.innerHTML = ""
+
+        let serviceBodiesDropdown = document.getElementById('service-bodies-dropdown');
+        serviceBodiesDropdown.length = 0;
+
+        let defaultServiceBodiesOption = document.createElement('option');
+        defaultServiceBodiesOption.text = 'Select a service body:';
+
+        serviceBodiesDropdown.add(defaultServiceBodiesOption);
+        serviceBodiesDropdown.selectedIndex = 0;
+
+        let serviceBodiesOption;
         for (let i = 0; i < serviceBodies.length; i++) {
-            displayServiceBodies.innerHTML += "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" + sbc + " " + serviceBodies[i].name + "<br>"
-            sbc++
+            serviceBodiesOption = document.createElement('option');
+            serviceBodiesOption.text = serviceBodies[i].name;
+            serviceBodiesOption.value = rootServerUrl + "||" + serviceBodies[i].id;
+            serviceBodiesDropdown.add(serviceBodiesOption);
         }
-
         document.getElementById("serviceBodiesDiv").style.display = "block";
-        document.getElementById("sb-caret").style.display = "inline-block";
-
-        const serviceBodyInput = document.getElementById('service-bodies-selection');
-        serviceBodyInput.onkeydown = function (event) {
-            if (event.key === 'Enter') {
-                document.getElementById("sb-caret").style.display = "none";
-                proccessSelectedServiceBodies(serviceBodyInput.value, serviceBodies[selectionNumber - 1], rootServerUrl)
-            }
-        }
     }
 
-    async function proccessSelectedServiceBodies(selectionId, serviceBody, rootServerUrl) {
+    function serviceBodiesSelected() {
+        let serviceBodiesSelect = document.getElementById('service-bodies-dropdown');
+        let serviceBodiesOption = serviceBodiesSelect.options[serviceBodiesSelect.selectedIndex];
+        let selectionId = serviceBodiesSelect.selectedIndex
+        let regionUrl = serviceBodiesOption.value
+        let serviceBodyName = serviceBodiesOption.text
+        proccessSelectedServiceBodies(selectionId, regionUrl, serviceBodyName)
+    }
+
+    async function proccessSelectedServiceBodies(selectionId, regionUrl, serviceBodyName) {
+        const serviceBodyInfo = regionUrl.split("||");
+        let rootServerUrl = serviceBodyInfo[0];
+        let serviceBodySelectedId = serviceBodyInfo[1];
         document.getElementById('selectedServiceBodyLabel').innerHTML = "You selected: "
-        document.getElementById('selectedServiceBody').innerHTML = selectionId + " [" + serviceBody.name + " (" + serviceBody.id + ")]"
-        let meetingsData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetSearchResults&services=' + serviceBody.id + '&recursive=1&data_field_key=formats').then(function (response) {
+        document.getElementById('selectedServiceBody').innerHTML = selectionId + " [" + serviceBodyName + " (" + serviceBodySelectedId + ")]"
+        let meetingsData = await fetchJsonp(rootServerUrl + 'client_interface/jsonp/?switcher=GetSearchResults&services=' + serviceBodySelectedId + '&recursive=1&data_field_key=formats').then(function (response) {
             return response.json();
         })
         tally(meetingsData)
